// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/upload/demo/avatar.md correctly 1`] = `
<span
  class="avatar-uploader"
>
  <div
    class="ant-upload ant-upload-select ant-upload-select-picture-card"
    style="display:"
  />
</span>
`;

exports[`renders ./components/upload/demo/basic.md correctly 1`] = `
<span
  class=""
>
  <div
    class="ant-upload ant-upload-select ant-upload-select-text"
    style="display:"
  />
  <div
    class="ant-upload-list ant-upload-list-text"
  />
</span>
`;

exports[`renders ./components/upload/demo/defaultFileList.md correctly 1`] = `
<span
  class=""
>
  <div
    class="ant-upload ant-upload-select ant-upload-select-text"
    style="display:"
  />
  <div
    class="ant-upload-list ant-upload-list-text"
  >
    <div
      class="ant-upload-list-item ant-upload-list-item-done"
    >
      <div
        class="ant-upload-list-item-info"
      >
        <span>
          <i
            class="anticon anticon-paper-clip"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="paper-clip"
              fill="currentColor"
              height="1em"
              viewBox="0 0 1024 1024"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M884.7 267.2c-47.1-46.5-109.7-72.3-176.5-72.4h-.7c-32.1 0-63.4 6-93.2 17.8-30.9 12.3-58.7 30.4-82.5 53.9L298.9 496.7c-26.9 26.6-41.6 62.1-41.5 100 .1 37.8 15 73.3 42 100 27 26.7 62.8 41.4 101 41.5h.3c38.1 0 73.8-14.6 100.6-41l204.4-202c6.8-6.7 10.5-15.6 10.5-25 0-9.5-3.7-18.4-10.5-25-6.7-6.7-15.7-10.3-25.2-10.3s-18.5 3.7-25.2 10.3l-204.4 202c-13.3 13.2-31.2 20.4-50.3 20.4h-.1c-19.3-.1-37.4-7.5-50.8-20.8-13.5-13.4-21-31.2-21-50.2-.1-18.9 7.2-36.6 20.6-49.8l232.9-230.3c33.2-32.9 77.8-51 125.4-51h.5c47.8.1 92.7 18.5 126.4 51.7 33.6 33.3 52.2 77.6 52.3 124.8.1 47.2-18.2 91.4-51.5 124.3L588.2 810.8c-49.4 48.6-115.4 75.4-185.8 75.4h-.7c-70.7-.2-137.1-27.4-186.9-76.6-49.8-49.2-77.3-114.8-77.4-184.7-.2-69.9 27-135.3 76.4-184.1l319-315.4c6.8-6.7 10.5-15.6 10.5-25 0-9.5-3.7-18.4-10.5-25C526 68.7 517 65 507.5 65s-18.5 3.7-25.2 10.3l-319 315.5c-31.8 31.4-56.4 68.3-73.2 109.5C74 540.1 65.9 582.1 66 625.1c.1 43.1 8.4 85.1 24.8 124.8 16.9 41.2 41.6 78.1 73.6 109.7 31.8 31.5 69.2 56 110.9 72.8 40 16.1 82.5 24.3 126.2 24.5h.9c43.4 0 85.5-8 125.3-23.9 41.6-16.5 78.9-40.8 110.7-72.3l247.1-244.4c23.7-23.5 42.1-50.9 54.5-81.6 12-29.7 18.1-60.9 18-93-.3-66-26.3-128-73.3-174.5z"
              />
            </svg>
          </i>
          <a
            class="ant-upload-list-item-name"
            href="http://www.baidu.com/xxx.png"
            rel="noopener noreferrer"
            target="_blank"
            title="xxx.png"
          >
            xxx.png
          </a>
        </span>
      </div>
      <i
        class="anticon anticon-close"
        title="Remove file"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="close"
          fill="currentColor"
          height="1em"
          viewBox="0 0 1024 1024"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M567.7 514.9l254.8-254.6c15.4-15.4 15.4-40.3 0-55.6-15.4-15.4-40.3-15.4-55.6 0L512 459.2 257.1 204.6c-15.4-15.4-40.3-15.4-55.6 0-15.4 15.4-15.4 40.3 0 55.6l254.8 254.6-254.8 254.7c-15.4 15.4-15.4 40.3 0 55.6 7.7 7.7 17.8 11.5 27.8 11.5 10.1 0 20.1-3.8 27.8-11.5L512 570.5l254.9 254.7c7.7 7.7 17.7 11.5 27.8 11.5 10.1 0 20.1-3.8 27.8-11.5 15.4-15.4 15.4-40.3 0-55.6L567.7 514.9z"
          />
        </svg>
      </i>
    </div>
    <div
      class="ant-upload-list-item ant-upload-list-item-done"
    >
      <div
        class="ant-upload-list-item-info"
      >
        <span>
          <i
            class="anticon anticon-paper-clip"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="paper-clip"
              fill="currentColor"
              height="1em"
              viewBox="0 0 1024 1024"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M884.7 267.2c-47.1-46.5-109.7-72.3-176.5-72.4h-.7c-32.1 0-63.4 6-93.2 17.8-30.9 12.3-58.7 30.4-82.5 53.9L298.9 496.7c-26.9 26.6-41.6 62.1-41.5 100 .1 37.8 15 73.3 42 100 27 26.7 62.8 41.4 101 41.5h.3c38.1 0 73.8-14.6 100.6-41l204.4-202c6.8-6.7 10.5-15.6 10.5-25 0-9.5-3.7-18.4-10.5-25-6.7-6.7-15.7-10.3-25.2-10.3s-18.5 3.7-25.2 10.3l-204.4 202c-13.3 13.2-31.2 20.4-50.3 20.4h-.1c-19.3-.1-37.4-7.5-50.8-20.8-13.5-13.4-21-31.2-21-50.2-.1-18.9 7.2-36.6 20.6-49.8l232.9-230.3c33.2-32.9 77.8-51 125.4-51h.5c47.8.1 92.7 18.5 126.4 51.7 33.6 33.3 52.2 77.6 52.3 124.8.1 47.2-18.2 91.4-51.5 124.3L588.2 810.8c-49.4 48.6-115.4 75.4-185.8 75.4h-.7c-70.7-.2-137.1-27.4-186.9-76.6-49.8-49.2-77.3-114.8-77.4-184.7-.2-69.9 27-135.3 76.4-184.1l319-315.4c6.8-6.7 10.5-15.6 10.5-25 0-9.5-3.7-18.4-10.5-25C526 68.7 517 65 507.5 65s-18.5 3.7-25.2 10.3l-319 315.5c-31.8 31.4-56.4 68.3-73.2 109.5C74 540.1 65.9 582.1 66 625.1c.1 43.1 8.4 85.1 24.8 124.8 16.9 41.2 41.6 78.1 73.6 109.7 31.8 31.5 69.2 56 110.9 72.8 40 16.1 82.5 24.3 126.2 24.5h.9c43.4 0 85.5-8 125.3-23.9 41.6-16.5 78.9-40.8 110.7-72.3l247.1-244.4c23.7-23.5 42.1-50.9 54.5-81.6 12-29.7 18.1-60.9 18-93-.3-66-26.3-128-73.3-174.5z"
              />
            </svg>
          </i>
          <a
            class="ant-upload-list-item-name"
            href="http://www.baidu.com/yyy.png"
            rel="noopener noreferrer"
            target="_blank"
            title="yyy.png"
          >
            yyy.png
          </a>
        </span>
      </div>
      <i
        class="anticon anticon-close"
        title="Remove file"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="close"
          fill="currentColor"
          height="1em"
          viewBox="0 0 1024 1024"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M567.7 514.9l254.8-254.6c15.4-15.4 15.4-40.3 0-55.6-15.4-15.4-40.3-15.4-55.6 0L512 459.2 257.1 204.6c-15.4-15.4-40.3-15.4-55.6 0-15.4 15.4-15.4 40.3 0 55.6l254.8 254.6-254.8 254.7c-15.4 15.4-15.4 40.3 0 55.6 7.7 7.7 17.8 11.5 27.8 11.5 10.1 0 20.1-3.8 27.8-11.5L512 570.5l254.9 254.7c7.7 7.7 17.7 11.5 27.8 11.5 10.1 0 20.1-3.8 27.8-11.5 15.4-15.4 15.4-40.3 0-55.6L567.7 514.9z"
          />
        </svg>
      </i>
    </div>
    <div
      class="ant-upload-list-item ant-upload-list-item-error"
    >
      <div
        class="ant-upload-list-item-info"
      >
        <span>
          <i
            class="anticon anticon-paper-clip"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="paper-clip"
              fill="currentColor"
              height="1em"
              viewBox="0 0 1024 1024"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M884.7 267.2c-47.1-46.5-109.7-72.3-176.5-72.4h-.7c-32.1 0-63.4 6-93.2 17.8-30.9 12.3-58.7 30.4-82.5 53.9L298.9 496.7c-26.9 26.6-41.6 62.1-41.5 100 .1 37.8 15 73.3 42 100 27 26.7 62.8 41.4 101 41.5h.3c38.1 0 73.8-14.6 100.6-41l204.4-202c6.8-6.7 10.5-15.6 10.5-25 0-9.5-3.7-18.4-10.5-25-6.7-6.7-15.7-10.3-25.2-10.3s-18.5 3.7-25.2 10.3l-204.4 202c-13.3 13.2-31.2 20.4-50.3 20.4h-.1c-19.3-.1-37.4-7.5-50.8-20.8-13.5-13.4-21-31.2-21-50.2-.1-18.9 7.2-36.6 20.6-49.8l232.9-230.3c33.2-32.9 77.8-51 125.4-51h.5c47.8.1 92.7 18.5 126.4 51.7 33.6 33.3 52.2 77.6 52.3 124.8.1 47.2-18.2 91.4-51.5 124.3L588.2 810.8c-49.4 48.6-115.4 75.4-185.8 75.4h-.7c-70.7-.2-137.1-27.4-186.9-76.6-49.8-49.2-77.3-114.8-77.4-184.7-.2-69.9 27-135.3 76.4-184.1l319-315.4c6.8-6.7 10.5-15.6 10.5-25 0-9.5-3.7-18.4-10.5-25C526 68.7 517 65 507.5 65s-18.5 3.7-25.2 10.3l-319 315.5c-31.8 31.4-56.4 68.3-73.2 109.5C74 540.1 65.9 582.1 66 625.1c.1 43.1 8.4 85.1 24.8 124.8 16.9 41.2 41.6 78.1 73.6 109.7 31.8 31.5 69.2 56 110.9 72.8 40 16.1 82.5 24.3 126.2 24.5h.9c43.4 0 85.5-8 125.3-23.9 41.6-16.5 78.9-40.8 110.7-72.3l247.1-244.4c23.7-23.5 42.1-50.9 54.5-81.6 12-29.7 18.1-60.9 18-93-.3-66-26.3-128-73.3-174.5z"
              />
            </svg>
          </i>
          <a
            class="ant-upload-list-item-name"
            href="http://www.baidu.com/zzz.png"
            rel="noopener noreferrer"
            target="_blank"
            title="zzz.png"
          >
            zzz.png
          </a>
        </span>
      </div>
      <i
        class="anticon anticon-close"
        title="Remove file"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="close"
          fill="currentColor"
          height="1em"
          viewBox="0 0 1024 1024"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M567.7 514.9l254.8-254.6c15.4-15.4 15.4-40.3 0-55.6-15.4-15.4-40.3-15.4-55.6 0L512 459.2 257.1 204.6c-15.4-15.4-40.3-15.4-55.6 0-15.4 15.4-15.4 40.3 0 55.6l254.8 254.6-254.8 254.7c-15.4 15.4-15.4 40.3 0 55.6 7.7 7.7 17.8 11.5 27.8 11.5 10.1 0 20.1-3.8 27.8-11.5L512 570.5l254.9 254.7c7.7 7.7 17.7 11.5 27.8 11.5 10.1 0 20.1-3.8 27.8-11.5 15.4-15.4 15.4-40.3 0-55.6L567.7 514.9z"
          />
        </svg>
      </i>
    </div>
  </div>
</span>
`;

exports[`renders ./components/upload/demo/directory.md correctly 1`] = `
<span
  class=""
>
  <div
    class="ant-upload ant-upload-select ant-upload-select-text"
    style="display:"
  />
  <div
    class="ant-upload-list ant-upload-list-text"
  />
</span>
`;

exports[`renders ./components/upload/demo/drag.md correctly 1`] = `
<span
  class=""
>
  <div
    class="ant-upload ant-upload-drag"
  />
  <div
    class="ant-upload-list ant-upload-list-text"
  />
</span>
`;

exports[`renders ./components/upload/demo/fileList.md correctly 1`] = `
<span
  class=""
>
  <div
    class="ant-upload ant-upload-select ant-upload-select-text"
    style="display:"
  />
  <div
    class="ant-upload-list ant-upload-list-text"
  >
    <div
      class="ant-upload-list-item ant-upload-list-item-done"
    >
      <div
        class="ant-upload-list-item-info"
      >
        <span>
          <i
            class="anticon anticon-paper-clip"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="paper-clip"
              fill="currentColor"
              height="1em"
              viewBox="0 0 1024 1024"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M884.7 267.2c-47.1-46.5-109.7-72.3-176.5-72.4h-.7c-32.1 0-63.4 6-93.2 17.8-30.9 12.3-58.7 30.4-82.5 53.9L298.9 496.7c-26.9 26.6-41.6 62.1-41.5 100 .1 37.8 15 73.3 42 100 27 26.7 62.8 41.4 101 41.5h.3c38.1 0 73.8-14.6 100.6-41l204.4-202c6.8-6.7 10.5-15.6 10.5-25 0-9.5-3.7-18.4-10.5-25-6.7-6.7-15.7-10.3-25.2-10.3s-18.5 3.7-25.2 10.3l-204.4 202c-13.3 13.2-31.2 20.4-50.3 20.4h-.1c-19.3-.1-37.4-7.5-50.8-20.8-13.5-13.4-21-31.2-21-50.2-.1-18.9 7.2-36.6 20.6-49.8l232.9-230.3c33.2-32.9 77.8-51 125.4-51h.5c47.8.1 92.7 18.5 126.4 51.7 33.6 33.3 52.2 77.6 52.3 124.8.1 47.2-18.2 91.4-51.5 124.3L588.2 810.8c-49.4 48.6-115.4 75.4-185.8 75.4h-.7c-70.7-.2-137.1-27.4-186.9-76.6-49.8-49.2-77.3-114.8-77.4-184.7-.2-69.9 27-135.3 76.4-184.1l319-315.4c6.8-6.7 10.5-15.6 10.5-25 0-9.5-3.7-18.4-10.5-25C526 68.7 517 65 507.5 65s-18.5 3.7-25.2 10.3l-319 315.5c-31.8 31.4-56.4 68.3-73.2 109.5C74 540.1 65.9 582.1 66 625.1c.1 43.1 8.4 85.1 24.8 124.8 16.9 41.2 41.6 78.1 73.6 109.7 31.8 31.5 69.2 56 110.9 72.8 40 16.1 82.5 24.3 126.2 24.5h.9c43.4 0 85.5-8 125.3-23.9 41.6-16.5 78.9-40.8 110.7-72.3l247.1-244.4c23.7-23.5 42.1-50.9 54.5-81.6 12-29.7 18.1-60.9 18-93-.3-66-26.3-128-73.3-174.5z"
              />
            </svg>
          </i>
          <a
            class="ant-upload-list-item-name"
            href="http://www.baidu.com/xxx.png"
            rel="noopener noreferrer"
            target="_blank"
            title="xxx.png"
          >
            xxx.png
          </a>
        </span>
      </div>
      <i
        class="anticon anticon-close"
        title="Remove file"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="close"
          fill="currentColor"
          height="1em"
          viewBox="0 0 1024 1024"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M567.7 514.9l254.8-254.6c15.4-15.4 15.4-40.3 0-55.6-15.4-15.4-40.3-15.4-55.6 0L512 459.2 257.1 204.6c-15.4-15.4-40.3-15.4-55.6 0-15.4 15.4-15.4 40.3 0 55.6l254.8 254.6-254.8 254.7c-15.4 15.4-15.4 40.3 0 55.6 7.7 7.7 17.8 11.5 27.8 11.5 10.1 0 20.1-3.8 27.8-11.5L512 570.5l254.9 254.7c7.7 7.7 17.7 11.5 27.8 11.5 10.1 0 20.1-3.8 27.8-11.5 15.4-15.4 15.4-40.3 0-55.6L567.7 514.9z"
          />
        </svg>
      </i>
    </div>
  </div>
</span>
`;

exports[`renders ./components/upload/demo/picture-card.md correctly 1`] = `
<div
  class="clearfix"
>
  <span
    class=""
  >
    <div
      class="ant-upload-list ant-upload-list-picture-card"
    >
      <div
        class="ant-upload-list-item ant-upload-list-item-done"
      >
        <div
          class="ant-upload-list-item-info"
        >
          <span>
            <a
              class="ant-upload-list-item-thumbnail"
              href="https://zos.alipayobjects.com/rmsportal/jkjgkEfvpUPVyRjUImniVslZfWPnJuuZ.png"
              rel="noopener noreferrer"
              target="_blank"
            >
              <img
                alt="xxx.png"
                src="https://zos.alipayobjects.com/rmsportal/jkjgkEfvpUPVyRjUImniVslZfWPnJuuZ.png"
              />
            </a>
            <a
              class="ant-upload-list-item-name"
              href="https://zos.alipayobjects.com/rmsportal/jkjgkEfvpUPVyRjUImniVslZfWPnJuuZ.png"
              rel="noopener noreferrer"
              target="_blank"
              title="xxx.png"
            >
              xxx.png
            </a>
          </span>
        </div>
        <span
          class="ant-upload-list-item-actions"
        >
          <a
            href="https://zos.alipayobjects.com/rmsportal/jkjgkEfvpUPVyRjUImniVslZfWPnJuuZ.png"
            rel="noopener noreferrer"
            target="_blank"
            title="Preview file"
          >
            <i
              class="anticon anticon-eye-o"
            >
              <svg
                aria-hidden="true"
                class=""
                data-icon="eye-o"
                fill="currentColor"
                height="1em"
                viewBox="0 0 1024 1024"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M963.4 511.7c-.3-5.6-8.9-33.3-20.9-62.1-12.3-29.7-33.1-72.7-61.9-108.6-37.7-47.2-84.2-84.9-138.2-111.9-66.3-33.3-143.9-50.1-230.5-50.1-86.5 0-164.1 16.9-230.4 50.2C227.9 256 181.4 293.6 143.3 341c-28.8 36-49.5 79-61.8 108.7-12 28.8-20.5 56.5-20.8 62.1v.4c.3 5.6 8.9 33.3 20.9 62.2 12.4 29.7 33.1 72.7 61.8 108.5 37.7 47.2 84.2 84.9 138.2 111.9 66.7 33.4 144.2 50.3 230.4 50.3 86.3 0 163.8-16.9 230.4-50.3 53.8-26.9 100.3-64.6 138.2-111.8 28.8-35.9 49.6-78.9 61.9-108.6 12-28.8 20.6-56.5 20.9-62.1v-.2-.4zm-74.2.2c-5.7 17.4-27.8 80.2-64.4 125.8l-.5.5c-31.1 39-69.6 70.1-114.3 92.6-56.5 28.3-123.3 42.7-198.4 42.7-75.2 0-141.9-14.4-198.4-42.7-44.6-22.3-83-53.5-114.3-92.7-36.8-45.8-59-108.8-64.7-126.3 5.7-17.4 27.9-80.3 64.7-126.3 31.4-39.2 69.9-70.3 114.4-92.6 56.6-28.3 123.4-42.6 198.6-42.6 75.5 0 142.2 14.3 198.3 42.6 44.6 22.3 83 53.5 114.3 92.7 36.8 46 59 108.9 64.7 126.3z"
                />
                <path
                  d="M511.9 337.8c-95.6 0-173.3 77.8-173.3 173.3s77.8 173.3 173.3 173.3 173.3-77.8 173.3-173.3-77.7-173.3-173.3-173.3zm102 173.3c0 27.2-10.6 52.8-29.9 72.1-19.3 19.3-44.9 29.9-72.1 29.9-27.2 0-52.8-10.6-72.1-29.9-19.3-19.3-29.9-44.9-29.9-72.1 0-27.2 10.6-52.8 29.9-72.1 19.3-19.3 44.9-29.9 72.1-29.9 27.2 0 52.8 10.6 72.1 29.9 19.3 19.3 29.9 44.9 29.9 72.1z"
                />
              </svg>
            </i>
          </a>
          <i
            class="anticon anticon-delete"
            title="Remove file"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="delete"
              fill="currentColor"
              height="1em"
              viewBox="0 0 1024 1024"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M178.086 945.957c-1.094-.39-2.207-.898-3.3-1.406 1.21.508 2.206 1.015 3.3 1.406zm-8.574-4.082c-1.504-.898-2.989-1.797-4.395-2.793 1.387.996 2.89 1.895 4.395 2.793zM950.39 203.437c-6.797-6.796-16.68-10.585-26.27-10.585H739.746V135.41c0-38.847-31.562-70.41-70.41-70.41H354.609c-38.847 0-70.41 31.563-70.41 70.41v57.442H98.887c-19.668 0-35.762 15.976-35.762 35.761s15.977 35.762 35.762 35.762h31.562v622.363c0 38.848 31.563 70.41 70.41 70.41h632.266c38.848 0 70.41-31.562 70.41-70.41V264.375h20.567c19.668 0 36.757-15.977 36.757-35.762.02-9.492-3.672-18.379-10.468-25.175zm-595.899-67.812h314.531v57.832h-314.53v-57.832zm478.535 751.016H200.86V264.375H833.008v622.266zM511.504 384.219c-19.883 0-35.957 16.074-35.957 35.957v333.613c0 19.883 16.074 35.957 35.957 35.957s35.957-16.074 35.957-35.957V420.176c0-19.863-16.074-35.957-35.957-35.957zm-194.766 0c-19.883 0-35.957 16.074-35.957 35.957v333.613c0 19.883 16.074 35.957 35.957 35.957s35.957-16.074 35.957-35.957V420.176c0-19.863-16.093-35.957-35.957-35.957zm387.54 0c-19.883 0-35.958 16.074-35.958 35.957v333.613c0 19.883 16.075 35.957 35.957 35.957s35.957-16.074 35.957-35.957V420.176c0-19.863-16.074-35.957-35.957-35.957z"
              />
            </svg>
          </i>
        </span>
      </div>
    </div>
    <div
      class="ant-upload ant-upload-select ant-upload-select-picture-card"
      style="display:"
    />
  </span>
</div>
`;

exports[`renders ./components/upload/demo/picture-style.md correctly 1`] = `
<div>
  <span
    class=""
  >
    <div
      class="ant-upload ant-upload-select ant-upload-select-picture"
      style="display:"
    />
    <div
      class="ant-upload-list ant-upload-list-picture"
    >
      <div
        class="ant-upload-list-item ant-upload-list-item-done"
      >
        <div
          class="ant-upload-list-item-info"
        >
          <span>
            <a
              class="ant-upload-list-item-thumbnail"
              href="https://zos.alipayobjects.com/rmsportal/jkjgkEfvpUPVyRjUImniVslZfWPnJuuZ.png"
              rel="noopener noreferrer"
              target="_blank"
            >
              <img
                alt="xxx.png"
                src="https://zos.alipayobjects.com/rmsportal/jkjgkEfvpUPVyRjUImniVslZfWPnJuuZ.png"
              />
            </a>
            <a
              class="ant-upload-list-item-name"
              href="https://zos.alipayobjects.com/rmsportal/jkjgkEfvpUPVyRjUImniVslZfWPnJuuZ.png"
              rel="noopener noreferrer"
              target="_blank"
              title="xxx.png"
            >
              xxx.png
            </a>
          </span>
        </div>
        <i
          class="anticon anticon-close"
          title="Remove file"
        >
          <svg
            aria-hidden="true"
            class=""
            data-icon="close"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M567.7 514.9l254.8-254.6c15.4-15.4 15.4-40.3 0-55.6-15.4-15.4-40.3-15.4-55.6 0L512 459.2 257.1 204.6c-15.4-15.4-40.3-15.4-55.6 0-15.4 15.4-15.4 40.3 0 55.6l254.8 254.6-254.8 254.7c-15.4 15.4-15.4 40.3 0 55.6 7.7 7.7 17.8 11.5 27.8 11.5 10.1 0 20.1-3.8 27.8-11.5L512 570.5l254.9 254.7c7.7 7.7 17.7 11.5 27.8 11.5 10.1 0 20.1-3.8 27.8-11.5 15.4-15.4 15.4-40.3 0-55.6L567.7 514.9z"
            />
          </svg>
        </i>
      </div>
      <div
        class="ant-upload-list-item ant-upload-list-item-done"
      >
        <div
          class="ant-upload-list-item-info"
        >
          <span>
            <a
              class="ant-upload-list-item-thumbnail"
              href="https://zos.alipayobjects.com/rmsportal/jkjgkEfvpUPVyRjUImniVslZfWPnJuuZ.png"
              rel="noopener noreferrer"
              target="_blank"
            >
              <img
                alt="yyy.png"
                src="https://zos.alipayobjects.com/rmsportal/jkjgkEfvpUPVyRjUImniVslZfWPnJuuZ.png"
              />
            </a>
            <a
              class="ant-upload-list-item-name"
              href="https://zos.alipayobjects.com/rmsportal/jkjgkEfvpUPVyRjUImniVslZfWPnJuuZ.png"
              rel="noopener noreferrer"
              target="_blank"
              title="yyy.png"
            >
              yyy.png
            </a>
          </span>
        </div>
        <i
          class="anticon anticon-close"
          title="Remove file"
        >
          <svg
            aria-hidden="true"
            class=""
            data-icon="close"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M567.7 514.9l254.8-254.6c15.4-15.4 15.4-40.3 0-55.6-15.4-15.4-40.3-15.4-55.6 0L512 459.2 257.1 204.6c-15.4-15.4-40.3-15.4-55.6 0-15.4 15.4-15.4 40.3 0 55.6l254.8 254.6-254.8 254.7c-15.4 15.4-15.4 40.3 0 55.6 7.7 7.7 17.8 11.5 27.8 11.5 10.1 0 20.1-3.8 27.8-11.5L512 570.5l254.9 254.7c7.7 7.7 17.7 11.5 27.8 11.5 10.1 0 20.1-3.8 27.8-11.5 15.4-15.4 15.4-40.3 0-55.6L567.7 514.9z"
            />
          </svg>
        </i>
      </div>
    </div>
  </span>
  <br />
  <br />
  <span
    class="upload-list-inline"
  >
    <div
      class="ant-upload ant-upload-select ant-upload-select-picture"
      style="display:"
    />
    <div
      class="ant-upload-list ant-upload-list-picture"
    >
      <div
        class="ant-upload-list-item ant-upload-list-item-done"
      >
        <div
          class="ant-upload-list-item-info"
        >
          <span>
            <a
              class="ant-upload-list-item-thumbnail"
              href="https://zos.alipayobjects.com/rmsportal/jkjgkEfvpUPVyRjUImniVslZfWPnJuuZ.png"
              rel="noopener noreferrer"
              target="_blank"
            >
              <img
                alt="xxx.png"
                src="https://zos.alipayobjects.com/rmsportal/jkjgkEfvpUPVyRjUImniVslZfWPnJuuZ.png"
              />
            </a>
            <a
              class="ant-upload-list-item-name"
              href="https://zos.alipayobjects.com/rmsportal/jkjgkEfvpUPVyRjUImniVslZfWPnJuuZ.png"
              rel="noopener noreferrer"
              target="_blank"
              title="xxx.png"
            >
              xxx.png
            </a>
          </span>
        </div>
        <i
          class="anticon anticon-close"
          title="Remove file"
        >
          <svg
            aria-hidden="true"
            class=""
            data-icon="close"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M567.7 514.9l254.8-254.6c15.4-15.4 15.4-40.3 0-55.6-15.4-15.4-40.3-15.4-55.6 0L512 459.2 257.1 204.6c-15.4-15.4-40.3-15.4-55.6 0-15.4 15.4-15.4 40.3 0 55.6l254.8 254.6-254.8 254.7c-15.4 15.4-15.4 40.3 0 55.6 7.7 7.7 17.8 11.5 27.8 11.5 10.1 0 20.1-3.8 27.8-11.5L512 570.5l254.9 254.7c7.7 7.7 17.7 11.5 27.8 11.5 10.1 0 20.1-3.8 27.8-11.5 15.4-15.4 15.4-40.3 0-55.6L567.7 514.9z"
            />
          </svg>
        </i>
      </div>
      <div
        class="ant-upload-list-item ant-upload-list-item-done"
      >
        <div
          class="ant-upload-list-item-info"
        >
          <span>
            <a
              class="ant-upload-list-item-thumbnail"
              href="https://zos.alipayobjects.com/rmsportal/jkjgkEfvpUPVyRjUImniVslZfWPnJuuZ.png"
              rel="noopener noreferrer"
              target="_blank"
            >
              <img
                alt="yyy.png"
                src="https://zos.alipayobjects.com/rmsportal/jkjgkEfvpUPVyRjUImniVslZfWPnJuuZ.png"
              />
            </a>
            <a
              class="ant-upload-list-item-name"
              href="https://zos.alipayobjects.com/rmsportal/jkjgkEfvpUPVyRjUImniVslZfWPnJuuZ.png"
              rel="noopener noreferrer"
              target="_blank"
              title="yyy.png"
            >
              yyy.png
            </a>
          </span>
        </div>
        <i
          class="anticon anticon-close"
          title="Remove file"
        >
          <svg
            aria-hidden="true"
            class=""
            data-icon="close"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M567.7 514.9l254.8-254.6c15.4-15.4 15.4-40.3 0-55.6-15.4-15.4-40.3-15.4-55.6 0L512 459.2 257.1 204.6c-15.4-15.4-40.3-15.4-55.6 0-15.4 15.4-15.4 40.3 0 55.6l254.8 254.6-254.8 254.7c-15.4 15.4-15.4 40.3 0 55.6 7.7 7.7 17.8 11.5 27.8 11.5 10.1 0 20.1-3.8 27.8-11.5L512 570.5l254.9 254.7c7.7 7.7 17.7 11.5 27.8 11.5 10.1 0 20.1-3.8 27.8-11.5 15.4-15.4 15.4-40.3 0-55.6L567.7 514.9z"
            />
          </svg>
        </i>
      </div>
    </div>
  </span>
</div>
`;

exports[`renders ./components/upload/demo/upload-manually.md correctly 1`] = `
<div>
  <span
    class=""
  >
    <div
      class="ant-upload ant-upload-select ant-upload-select-text"
      style="display:"
    />
    <div
      class="ant-upload-list ant-upload-list-text"
    />
  </span>
  <button
    class="ant-btn upload-demo-start ant-btn-primary"
    disabled=""
    type="button"
  >
    <span>
      Start Upload
    </span>
  </button>
</div>
`;
